# xcodeproj2bazel

./: .bazelrc  .gitignore  Gemfile  README.md  WORKSPACE  test.sh  xcodeproj2bazel.sh
.bundle/: config
examples/AFNetworking/: BUILD.bazel
examples/Kingfisher/: BUILD.bazel
examples/Masonry/: BUILD.bazel
examples/SDWebImage/: BUILD.bazel
examples/app_and_library_dead_code/: BUILD.bazel
examples/app_and_library_dead_code/app_and_library_dead_code/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
examples/app_and_library_dead_code/app_and_library_dead_code.xcodeproj/: project.pbxproj
examples/app_and_library_dead_code/dynamic_framework_b/: Info.plist  dynamic_framework_b.c  dynamic_framework_b.h
examples/app_and_library_dead_code/dynamic_framework_d/: Info.plist  dynamic_framework_d.c  dynamic_framework_d.h
examples/app_and_library_dead_code/static_framework_c/: static_framework_c_bye.c  static_framework_c_bye.h  static_framework_c_hello.c  static_framework_c_hello.h
examples/empty_app_storyboard_objc/: BUILD.bazel
examples/empty_app_storyboard_objc/empty_app_storyboard_objc/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
examples/empty_app_storyboard_objc/empty_app_storyboard_objc.xcodeproj/: project.pbxproj
examples/empty_app_storyboard_swift/: BUILD.bazel
examples/empty_app_storyboard_swift/empty_app_storyboard_swift/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
examples/empty_app_storyboard_swift/empty_app_storyboard_swift.xcodeproj/: project.pbxproj
examples/empty_app_swiftui/empty_app_swiftui/: ContentView.swift  empty_app_swiftuiApp.swift
examples/empty_app_swiftui/empty_app_swiftui.xcodeproj/: project.pbxproj
examples/swift_app_with_pod_no_use_frameworks/: BUILD.bazel  Podfile
examples/swift_app_with_pod_no_use_frameworks/swift_app_with_pod_no_use_frameworks/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
examples/swift_app_with_pod_no_use_frameworks/swift_app_with_pod_no_use_frameworks.xcodeproj/: project.pbxproj
examples/swift_app_with_pod_no_use_frameworks/swift_app_with_pod_no_use_frameworks.xcworkspace/: contents.xcworkspacedata
examples/swift_app_with_pod_use_frameworks/: BUILD.bazel  Podfile
examples/swift_app_with_pod_use_frameworks/swift_app_with_pod_use_frameworks/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
examples/swift_app_with_pod_use_frameworks/swift_app_with_pod_use_frameworks.xcodeproj/: project.pbxproj
examples/swift_app_with_pod_use_frameworks/swift_app_with_pod_use_frameworks.xcworkspace/: contents.xcworkspacedata
xcodeproj2bazel/: BazelFormatter.rb  BazelTranslator.rb  DependencyAnalyzer.rb  DynamicConfig.rb  FileFilter.rb  FileLogger.rb  KeyValueStore.rb  Xcodeproj2Bazel.rb  XcodeprojParser.rb
xcodeproj2bazel_rules/: cc_header.bzl  cc_library.bzl  hmap.bzl  ios_dynamic_framework.bzl  ios_framework.bzl  metal_library.bzl  modify_module_map.sh  module_map.bzl  native_swift_library.bzl  objc_library.bzl  static_library.bzl  swift_library.bzl  system_library.bzl  types.bzl
xcodeproj2bazel_rules/hmap/: hmapbuild.c
